deps/jansson/test/suites/invalid/unterminated-string/error.strip
1 3 3
premature end of input near '"a'
